:hammer: Fixed article images being too large on smaller screens

--- a/styles/_articlespages.scss
+++ b/styles/_articlespages.scss
@@ -41,6 +41,7 @@
 
         img {
             max-width: 600px;
+            width: 100%;
             padding: 2rem 0;
         }
     }
